<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="238dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="78dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coding" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Ytjtxt"
        android:layout_width="193dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/YtjInfotxt"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Searchbutton"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="24dp"
        android:text="@string/SearchButton"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.921" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:text="@string/hellotext"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/StartBtn"
        app:layout_constraintBottom_toTopOf="@+id/gameStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/gameStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:text="@string/SecondBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_button" />

    <Button
        android:id="@+id/TentBtnn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="161dp"
        android:text="@string/TenttiBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameStart"
        app:layout_constraintVertical_bias="0.075" />
</androidx.constraintlayout.widget.ConstraintLayout>