<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="176dp"
        android:text="@string/locationName"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="342dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/mapbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="27dp"
            android:hint="@string/longitudetxt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longitudetxt"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="27dp"
            android:hint="@string/latitudetxt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latitudetxt"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="27dp"
            android:hint="@string/addresstxt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addresstxt"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/mapbtn"
        android:layout_width="384dp"
        android:layout_height="59dp"

        android:layout_marginStart="27dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="68dp"
        android:text="@string/mapButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

